css/master.css
.jumbotron {
  text-shadow: 0px 3px 3px #000, 3px 0px 3px #000, 0px -3px 3px #000, -3px 0px 3px #000;
  color: #9c160f;
  background-color: transparent;
}

body {
  background-color: #242424;
}

.container {
  background-image: url(../img/hal9000.jpg);
  background-repeat: no-repeat;
}

p {
  text-shadow: 0px 3px 3px #000, 3px 0px 3px #000, 0px -3px 3px #000, -3px 0px 3px #000;
  color: #9c160f;
  font-size: 1.5em;
}

span {
  background-color: #000;
  text-shadow: none;
  color: white;
}

.form-group {
  font-size: 1.5em;
}

#rangeInput {
  width: 87%;
}

